force-app/main/default/objects/sugati__Rate_Time_Slot__c/sugati__Rate_Time_Slot__c.object-meta.xml
<CustomObject>
    <label>Rate / Time Slot</label>
    <nameField>
        <displayFormat>RTS-{00000000}</displayFormat>
        <label>Rate / Time Slot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rates / Time Slots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>