force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Activity_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Activity_Id__c</fullName>
    <formula>CASESAFEID(sugati__S_RTS_Availability__r.sugati__S_A_Activity_Delivery__r.sugati__S_AD_Activity__c)</formula>
    <label>Activity Id</label>
    <type>Text</type>
</CustomField>