force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Actual_Child_Sell__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Actual_Child_Sell__c</fullName>
    <description>The Contracted Child Sell Price</description>
    <inlineHelpText>The Contracted Child Sell Price</inlineHelpText>
    <label>Actual Child Sell</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>