force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Actual_Per_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Actual_Per_Unit_Cost__c</fullName>
    <description>The Contracted Unit Cost</description>
    <inlineHelpText>The Contracted Unit Cost</inlineHelpText>
    <label>Actual Per Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>