force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_All_day__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_All_day__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Rather than a specific time the record relates to an all-day event.</description>
    <inlineHelpText>Rather than a specific time the record relates to an all-day event.</inlineHelpText>
    <label>All-day</label>
    <type>Checkbox</type>
</CustomField>