force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Availability__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Availability__c</fullName>
    <description>What day does the Time-Slot refer to?</description>
    <inlineHelpText>What day does the Time-Slot refer to?</inlineHelpText>
    <label>Availability</label>
    <referenceTo>sugati__Availability__c</referenceTo>
    <relationshipLabel>Rates / Time Slots</relationshipLabel>
    <relationshipName>Rates_Time_Slots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>