force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Booked_Spaces__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Booked_Spaces__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of people booked using this rate.</description>
    <inlineHelpText>The number of people booked using this rate.</inlineHelpText>
    <label>Booked Spaces</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>