force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Date__c</fullName>
    <formula>sugati__S_RTS_Availability__r.sugati__S_A_Date__c</formula>
    <label>Date</label>
    <type>Date</type>
</CustomField>