force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Finishes_Next_Day__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Finishes_Next_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the event finishes the next day ie a transfer from 10pm to 2am then check this box.</description>
    <inlineHelpText>If the event finishes the next day ie a transfer from 10pm to 2am then check this box.</inlineHelpText>
    <label>Finishes Next Day?</label>
    <type>Checkbox</type>
</CustomField>