force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Image_Url__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Image_Url__c</fullName>
    <description>Internal use only - should never be populated</description>
    <label>Image Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>