force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Is_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Is_Start_Date__c</fullName>
    <formula>sugati__S_RTS_Availability__r.sugati__S_A_Is_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Start Date</label>
    <type>Checkbox</type>
</CustomField>