force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Live_Adult_Cost_Actual_Adult_Cost__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Live_Adult_Cost_Actual_Adult_Cost__c</fullName>
    <description>Difference between live Cost and contracted Cost</description>
    <formula>sugati__S_RTS_Live_Adult_Cost__c - sugati__S_RTS_Actual_Adult_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Difference between live Cost and contracted Cost</inlineHelpText>
    <label>Live Adult Cost - Actual Adult Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>