force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Live_Child_Sell__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Live_Child_Sell__c</fullName>
    <description>Live Child Sell</description>
    <inlineHelpText>Live Child Sell</inlineHelpText>
    <label>Live Child Sell</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>