force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Live_Infant_Cost__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Live_Infant_Cost__c</fullName>
    <description>Live Infant Cost</description>
    <inlineHelpText>Live Infant Cost</inlineHelpText>
    <label>Live Infant Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>