force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Live_Unit_Sell_Actual_Unit_Sell__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Live_Unit_Sell_Actual_Unit_Sell__c</fullName>
    <description>Difference between live Sell and contracted Sell</description>
    <formula>sugati__S_RTS_Live_Per_Unit_Sell__c - sugati__S_RTS_Actual_Per_Unit_Sell__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Difference between live Sell and contracted Sell</inlineHelpText>
    <label>Live Unit Sell - Actual Unit Sell</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>