force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Minimum_Duration__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Minimum_Duration__c</fullName>
    <description>Rate is only available if at least number of nights are booked. System will create a bulk booking record when this feature is enabled.</description>
    <inlineHelpText>Rate is only available if at least number of nights are booked. System will create a bulk booking record when this feature is enabled.</inlineHelpText>
    <label>Minimum Duration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>