force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Pax_From__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Pax_From__c</fullName>
    <description>For Banded rates, number of pax booked that activates this rate.</description>
    <inlineHelpText>For Banded rates, number of pax booked that activates this rate.</inlineHelpText>
    <label>Pax From</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>