force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Pax_To__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Pax_To__c</fullName>
    <description>For Banded rates the max number of pax that this rate can be applied to.</description>
    <inlineHelpText>For Banded rates the max number of pax that this rate can be applied to.</inlineHelpText>
    <label>Pax To</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>