force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Proposed_Child_Cost__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Proposed_Child_Cost__c</fullName>
    <description>The Cost you are proposing to the Supplier</description>
    <inlineHelpText>The Cost you are proposing to the Supplier</inlineHelpText>
    <label>Proposed Child Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>