force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Proposed_Per_Unit_Sell__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Proposed_Per_Unit_Sell__c</fullName>
    <description>The Sell Price you are proposing to the Supplier</description>
    <inlineHelpText>The Sell Price you are proposing to the Supplier</inlineHelpText>
    <label>Proposed Per Unit Sell</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>