force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Rate_Group__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Rate_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate Group</label>
    <referenceTo>sugati__Rate_Group__c</referenceTo>
    <relationshipLabel>Rates / Time Slots</relationshipLabel>
    <relationshipName>Rates_Time_Slots</relationshipName>
    <type>Lookup</type>
</CustomField>