force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Release_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Release_Date_Time__c</fullName>
    <formula>sugati__S_RTS_Start_Date_Time__c - sugati__S_RTS_Release_Days__c - (sugati__S_RTS_Release_Hours__c / 24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release Date/Time</label>
    <type>DateTime</type>
</CustomField>