force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Release_Days__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Release_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Minimum number of days you can book before delivery. IE if the Date was June 3rd and Release Days = 2 then no bookings could be taken after June 1st</description>
    <inlineHelpText>Minimum number of days you can book before delivery. IE if the Date was June 3rd and Release Days = 2 then no bookings could be taken after June 1st</inlineHelpText>
    <label>Release Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>