force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Release_Hours__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Release_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of hours prior to the start time, after which you cannot book this activity.</description>
    <inlineHelpText>The number of hours prior to the start time, after which you cannot book this activity.</inlineHelpText>
    <label>Release Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>