force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Reserved_Until__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Reserved_Until__c</fullName>
    <description>Once this date and time and pass has been passed the inventory will be available to anyone.</description>
    <inlineHelpText>Once this date and time and pass has been passed the inventory will be available to anyone.</inlineHelpText>
    <label>Reserved Until</label>
    <type>DateTime</type>
</CustomField>