force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Resource_Unit_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Resource_Unit_Id__c</fullName>
    <formula>IF(ISBLANK(sugati__S_RTS_Resource_Configuration__r.sugati__S_RC_Resource_Unit__c), sugati__S_RTS_Availability__r.sugati__S_A_Resource_Unit__c, sugati__S_RTS_Resource_Configuration__r.sugati__S_RC_Resource_Unit__c)</formula>
    <label>Resource Unit Id</label>
    <type>Text</type>
</CustomField>