force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Start_Date_Time__c</fullName>
    <formula>IF(sugati__S_RTS_All_day__c, 
    DATETIMEVALUE(TEXT(YEAR(sugati__S_RTS_Date__c))+&quot;-&quot;+TEXT(MONTH(sugati__S_RTS_Date__c))+&quot;-&quot;+TEXT(DAY(sugati__S_RTS_Date__c))+&quot; 00:00:00&quot;), 
    DATETIMEVALUE(TEXT(YEAR(sugati__S_RTS_Date__c))+&quot;-&quot;+TEXT(MONTH(sugati__S_RTS_Date__c))+&quot;-&quot;+TEXT(DAY(sugati__S_RTS_Date__c))+&quot; &quot;+LEFT(TEXT(sugati__S_RTS_From_Time__c), 8))
)</formula>
    <label>Start Date / Time</label>
    <type>DateTime</type>
</CustomField>