force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Status__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Status__c</fullName>
    <formula>TEXT(sugati__S_RTS_Availability__r.sugati__S_A_Status__c)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>