force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Supplier_Currency__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Supplier_Currency__c</fullName>
    <description>Defaults to value on supplier record (Supplier Currency). Can be overridden.</description>
    <inlineHelpText>Defaults to value on supplier record (Supplier Currency). Can be overridden.</inlineHelpText>
    <label>Supplier Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sugati__Supplier_Currencies</valueSetName>
    </valueSet>
</CustomField>