force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Supplier_Name__c</fullName>
    <formula>IF (NOT(ISBLANK(sugati__S_RTS_Availability__r.sugati__S_A_Resource_Unit__c)), 
    sugati__S_RTS_Availability__r.sugati__S_A_Resource_Unit__r.sugati__S_RU_Resource__r.sugati__S_R_Supplier__r.Name, 
    IF (NOT(ISBLANK(sugati__S_RTS_Resource_Configuration__c)), 
        sugati__S_RTS_Resource_Configuration__r.sugati__S_RC_Resource_Unit__r.sugati__S_RU_Resource__r.sugati__S_R_Supplier__r.Name, 
        IF (NOT(ISBLANK(sugati__S_RTS_Availability__r.sugati__S_A_Activity_Delivery__c)), 
            sugati__S_RTS_Availability__r.sugati__S_A_Activity_Delivery__r.sugati__S_AD_Supplier__r.Name, 
            &apos;&apos;
        )
    )
)</formula>
    <label>Supplier Name</label>
    <type>Text</type>
</CustomField>