force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_To_Time__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_To_Time__c</fullName>
    <description>When does the event finish?</description>
    <inlineHelpText>When does the event finish?</inlineHelpText>
    <label>To Time</label>
    <type>Time</type>
</CustomField>