force-app/main/default/objects/sugati__Rate_Time_Slot__c/fields/sugati__S_RTS_Transfer_Option__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RTS_Transfer_Option__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Transfer Option</label>
    <referenceTo>sugati__Transfer_Option__c</referenceTo>
    <relationshipLabel>Rates / Time Slots</relationshipLabel>
    <relationshipName>Rates_Time_Slots</relationshipName>
    <type>Lookup</type>
</CustomField>