force-app/main/default/objects/sugati__Rate_Time_Slot__c/recordTypes/sugati__Bulk_Cost.recordType-meta.xml
<RecordType>
    <fullName>sugati__Bulk_Cost</fullName>
    <active>true</active>
    <label>Bulk Cost</label>
</RecordType>