force-app/main/default/objects/sugati__Rate_Time_Slot__c/recordTypes/sugati__Cruise.recordType-meta.xml
<RecordType>
    <fullName>sugati__Cruise</fullName>
    <active>true</active>
    <label>Cruise</label>
</RecordType>