force-app/main/default/objects/sugati__Rate_Time_Slot__c/recordTypes/sugati__Dom_Flights.recordType-meta.xml
<RecordType>
    <fullName>sugati__Dom_Flights</fullName>
    <active>true</active>
    <label>Dom Flights</label>
</RecordType>