force-app/main/default/objects/sugati__Rate_Time_Slot__c/recordTypes/sugati__Excursion.recordType-meta.xml
<RecordType>
    <fullName>sugati__Excursion</fullName>
    <active>true</active>
    <label>Excursion</label>
</RecordType>