force-app/main/default/objects/sugati__Rate_Time_Slot__c/recordTypes/sugati__Ferry.recordType-meta.xml
<RecordType>
    <fullName>sugati__Ferry</fullName>
    <active>true</active>
    <label>Ferry</label>
</RecordType>