force-app/main/default/objects/sugati__Rate_Time_Slot__c/recordTypes/sugati__Int_Flight.recordType-meta.xml
<RecordType>
    <fullName>sugati__Int_Flight</fullName>
    <active>true</active>
    <label>Int Flight</label>
</RecordType>