force-app/main/default/objects/sugati__Rate_Time_Slot__c/recordTypes/sugati__Light_Aircraft.recordType-meta.xml
<RecordType>
    <fullName>sugati__Light_Aircraft</fullName>
    <active>true</active>
    <label>Light Aircraft</label>
</RecordType>