force-app/main/default/objects/sugati__Rate_Time_Slot__c/recordTypes/sugati__Meet_Greet.recordType-meta.xml
<RecordType>
    <fullName>sugati__Meet_Greet</fullName>
    <active>true</active>
    <label>Meet &amp; Greet</label>
</RecordType>