force-app/main/default/objects/sugati__Rate_Time_Slot__c/recordTypes/sugati__Private_Jet.recordType-meta.xml
<RecordType>
    <fullName>sugati__Private_Jet</fullName>
    <active>true</active>
    <label>Private Jet</label>
</RecordType>